Remove Articles component and unused imports
- Deleted `ArticlesView.razor` and its related functionality.
- Removed `Articles` and `Categories` imports from `_Imports.razor`.
- Minor adjustment to `PostInfoComponent.razor` for formatting consistency.
- Updated `Routes.razor` to clean up unnecessary layout reference.

--- a/Web/Components/Shared/PostInfoComponent.razor
+++ b/Web/Components/Shared/PostInfoComponent.razor
@@ -2,7 +2,7 @@
 
 	<div>Author: @Article.Author.UserName</div>
 
-	<div>Created: @Article.CreatedOn.ToString("M/d/yyyy", CultureInfo.InvariantCulture)</div>
+	<div>_Created: @Article.CreatedOn.ToString("M/d/yyyy", CultureInfo.InvariantCulture)</div>
 
 	@if(@Article.IsPublished)
 	{
